horizontal: layout issue fixed.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,9 @@
     position: fixed;
     z-index: 100;
 }
+.horizontalLayoutHeight {
+    height: auto !important;
+}
 
 .floatingpanelbutton {
     position: fixed;
